--- a/app/src/main/res/layout/fragment_banner2.xml
+++ b/app/src/main/res/layout/fragment_banner2.xml
@@ -14,16 +14,30 @@
         android:background="@drawable/home_image"
         android:contentDescription="@string/app_name"/>
 
+    <!-- 첫 번째 텍스트-->
     <TextView
-        android:id="@+id/tvName"
-        android:layout_width="match_parent"
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_centerInParent="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="교토"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:text="Hello"/>
+        style="@style/semibold18"
+        android:layout_marginBottom="35dp"
+        android:layout_marginEnd="20dp"/>
+
+    <!-- 두 번째 텍스트 -->
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="고요한 전통과 현대의 조화"
+        android:textColor="@android:color/white"
+        style="@style/medium14"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="20dp"/>
 
 </RelativeLayout>
