--- a/app/src/main/res/layout/fragment_best_post.xml
+++ b/app/src/main/res/layout/fragment_best_post.xml
@@ -68,6 +68,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
+            android:background="@color/white"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginTop="120dp"
