--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,6 +91,7 @@
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:textColor="@color/black"
+                        style="@style/regular14"
                         android:textColorHint="@color/gray1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -125,6 +126,8 @@
                         android:drawablePadding="-10dp"
                         android:text="추억이 머무는,\n여행 기록"
                         android:padding="10dp"
+                        android:textColor="@color/black"
+                        style="@style/medium12"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -230,11 +233,18 @@
                         app:layout_constraintStart_toEndOf="@id/tv_best_post"
                         app:layout_constraintTop_toTopOf="@id/tv_best_post"/>
 
+
+
+
+
+
+
+
                     <ImageView
                         android:id="@+id/iv_post_one"
-                        android:layout_width="170dp"
-                        android:layout_height="170dp"
-                        android:background="@color/gray1"
+                        android:layout_width="160dp"
+                        android:layout_height="160dp"
+                        android:scaleType="centerCrop"
                         app:layout_constraintStart_toStartOf="@id/tv_best_post"
                         app:layout_constraintTop_toBottomOf="@id/tv_best_post"
                         android:layout_marginTop="10dp"/>
@@ -242,9 +252,9 @@
 
                     <ImageView
                         android:id="@+id/iv_post_two"
-                        android:layout_width="170dp"
-                        android:layout_height="170dp"
-                        android:background="@color/gray1"
+                        android:layout_width="160dp"
+                        android:layout_height="160dp"
+                        android:scaleType="centerCrop"
                         android:layout_marginStart="20dp"
                         app:layout_constraintStart_toEndOf="@id/iv_post_one"
                         app:layout_constraintTop_toBottomOf="@id/tv_best_post"
