스크랩 빼고 API 연결 완료 (가능한 부분까지)

--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -86,5 +86,18 @@
         android:textColor="@color/white"
         android:text="수정하기" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="end">
+        <TextView
+            android:id="@+id/logout_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="로그아웃"
+            android:layout_gravity="bottom"
+            />
+    </LinearLayout>
 
 </LinearLayout>
