--- a/app/src/main/res/layout/item_follow.xml
+++ b/app/src/main/res/layout/item_follow.xml
@@ -41,5 +41,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Following"
-        android:backgroundTint="@color/black" />
+        android:background="@drawable/border_background" />
 </LinearLayout>
