--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -1,4 +1,3 @@
-<!-- item_image.xml -->
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
@@ -7,10 +6,11 @@
     android:radius="8dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/storyImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="centerCrop"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:contentDescription="Story Image" />
 
 </androidx.cardview.widget.CardView>
