--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -194,7 +194,7 @@
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:mcv_selectionColor="@android:color/transparent"
+            app:mcv_selectionColor="@color/gray5"
             app:mcv_showOtherDates="all"
             app:mcv_dateTextAppearance="@style/regular14"
             app:mcv_tileWidth="48dp"
