--- a/app/src/main/res/layout/chat_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_bottom_sheet.xml
@@ -69,7 +69,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_comments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintTop_toBottomOf="@id/tv_bottom_detailTitle"
@@ -95,7 +95,7 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:src="@drawable/ic_lock"
+            android:src="@drawable/ic_unlock"
             android:contentDescription="댓글 전송" />
 
         <EditText
