--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -205,55 +205,54 @@
                 app:flexWrap="wrap"
                 app:flexDirection="row"/>
 
-            <!-- 해시태그 -->
-            <TextView
-                android:id="@+id/tvHashtag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="해시태그"
-                style="@style/bold16"
-                android:textColor="@color/black"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"
-                app:layout_constraintStart_toStartOf="parent"/>
+<!--            &lt;!&ndash; 해시태그 &ndash;&gt;-->
+<!--            <TextView-->
+<!--                android:id="@+id/tvHashtag"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="해시태그"-->
+<!--                style="@style/bold16"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"-->
+<!--                app:layout_constraintStart_toStartOf="parent"/>-->
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/tvRegion"
-                app:layout_constraintStart_toStartOf="parent">
+<!--            <LinearLayout-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tvRegion"-->
+<!--                app:layout_constraintStart_toStartOf="parent">-->
 
-                <EditText
-                    android:id="@+id/etHashtag"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:textSize="14sp"/>
+<!--                <EditText-->
+<!--                    android:id="@+id/etHashtag"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:padding="8dp"-->
+<!--                    android:textSize="14sp"/>-->
 
-                <ImageView
-                    android:id="@+id/btnAddHashtag"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_plus_button"
-                    android:layout_gravity="center_vertical"/>
-            </LinearLayout>
+<!--                <ImageView-->
+<!--                    android:id="@+id/btnAddHashtag"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_plus_button"-->
+<!--                    android:layout_gravity="center_vertical"/>-->
+<!--            </LinearLayout>-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewHashtags"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/tvHashtag"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-                app:justifyContent="flex_start"
-                app:flexWrap="wrap"
-                app:flexDirection="row"/>
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/recyclerViewHashtags"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tvHashtag"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"-->
+<!--                app:justifyContent="flex_start"-->
+<!--                app:flexWrap="wrap"-->
+<!--                app:flexDirection="row"/>-->
 
-            <!-- 노래 -->
             <TextView
                 android:id="@+id/tvSong"
                 android:layout_width="wrap_content"
