--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -110,7 +110,7 @@
         android:layout_width="330dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:hint="비밀번호"
+        android:hint="비밀번호 (6 ~ 10자리)"
         android:textColor="@color/gray3"
         android:inputType="textPassword"
         android:paddingTop="1dp"
@@ -195,7 +195,7 @@
 
     <Button
         android:id="@+id/signup_btn"
-        android:layout_width="352dp"
+        android:layout_width="330dp"
         android:layout_height="68dp"
         android:background="@drawable/btn_radius_4"
         android:text="완료"
