--- a/app/src/main/res/layout/dialog_schedule_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_schedule_bottom_sheet.xml
@@ -4,42 +4,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/green_main"
-    android:paddingVertical="16dp"
-    android:paddingHorizontal="24dp">
-
+    android:background="@drawable/rounded_background"
+    android:paddingHorizontal="24dp"
+    android:paddingVertical="16dp">
     <!-- 상단 스와이프 힌트 -->
     <View
         android:id="@+id/dialog_top_bar"
         android:layout_width="56dp"
         android:layout_height="4dp"
-        android:background="@color/white"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 선택한 날짜 -->
     <TextView
         android:id="@+id/dialog_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="1.2 목"
-        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/dialog_top_bar"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_top_bar" />
 
     <!-- 일정 리스트 (RecyclerView) -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSchedules"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:paddingBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/dialog_date"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
