--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -13,20 +13,22 @@
         android:layout_height="match_parent"
         android:src="@drawable/ic_column"
         app:tint="@color/white"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="20dp"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <!-- 여행 제목 -->
     <TextView
         android:id="@+id/item_schedule_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="가족여행"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/item_schedule_delete"
         app:layout_constraintStart_toEndOf="@id/item_schedule_column"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/item_schedule_delete"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 여행 기간 -->
     <TextView
@@ -34,10 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1.2 목 ~ 1.3 금"
-        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/item_schedule_title"
-        app:layout_constraintTop_toBottomOf="@id/item_schedule_title"/>
+        app:layout_constraintTop_toBottomOf="@id/item_schedule_title" />
 
     <!-- 여행 내용 -->
     <TextView
@@ -45,10 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오사카"
-        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/item_schedule_title"
-        app:layout_constraintTop_toBottomOf="@id/item_schedule_period"/>
+        app:layout_constraintTop_toBottomOf="@id/item_schedule_period" />
 
     <!-- 삭제 아이콘 -->
     <ImageView
