--- a/app/src/main/res/layout/fragment_banner2.xml
+++ b/app/src/main/res/layout/fragment_banner2.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imgBanner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/home_image"
+        android:background="@drawable/home_image_kyoto"
         android:contentDescription="@string/app_name"/>
 
     <!-- 첫 번째 텍스트-->
