--- a/app/src/main/res/layout/item_grid_post.xml
+++ b/app/src/main/res/layout/item_grid_post.xml
@@ -32,6 +32,7 @@
                 android:layout_width="120dp"
                 android:layout_height="134dp"
                 android:elevation="8dp"
+                android:scaleType="centerCrop"
                 android:adjustViewBounds="true"/>
 
             <TextView
