--- a/app/src/main/res/layout/item_grid_post.xml
+++ b/app/src/main/res/layout/item_grid_post.xml
@@ -21,9 +21,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="198dp"
             android:orientation="vertical"
-            android:background="@color/green_main"
+            android:background="#F3F3F3"
             android:padding="10dp">
 
 
