[FEAT] : 팔로잉, 팔로워 API 연동

--- a/app/src/main/res/layout/item_follow.xml
+++ b/app/src/main/res/layout/item_follow.xml
@@ -39,7 +39,7 @@
     <Button
         android:id="@+id/btn_follow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Following"
         android:background="@drawable/border_background" />
 </LinearLayout>
