--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -13,7 +13,8 @@
         android:layout_height="100dp"
         android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/profile_circle_background" />
+        android:background="@drawable/profile_circle_background"
+        android:clipToOutline="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
